# discord-guild-configurator

./: .pre-commit-config.yaml  LICENSE  README.md  discord_guild_config.schema.json  pyproject.toml
.github/workflows/: ci.yml
configs/: europython_2025.json  europython_2025.py
scripts/: update-generated-types.py  update-json-configs.py  update-json-schema.py
src/discord_guild_configurator/: _utils.py  bot.py  configurator.py  generated_models.py  main.py  models.py
src/discord_guild_configurator/configs/: ep2025_config.py
