[project]
name = "discord-guild-configurator"
version = "0.1.0"
description = "Discord guild configuration manager"
readme = "README.md"
authors = [
    { name = "Niklas Mertsch", email = "niklasmertsch@web.de" },
]
requires-python = ">=3.11"
dependencies = [
    "discord>=2.3.2",
    "pydantic>=2.12.5",
]

[project.scripts]
discord-guild-configurator = "discord_guild_configurator.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ty.rules]
all = "error"

[tool.ruff]
line-length = 100
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # incompatible with `ruff format`
    "COM812",
    # (f-)string in exception
    "EM101",
    "EM102",
    "TRY003",
    # missing docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
]
fixable = [
    "TC",  # type checking
    "ANN",  # type annotations
    "F401",  # unused imports
    "I001",  # unsorted imports
    "UP",  # pyupgrade
    "PLR1730",  # if min/max over if else
    "RET505",  # superfluous else-return
    "PLR5501",  # collapse else-if into elif
    "F541",  # superfluous f-string prefix
    "F841",  # unused variable
    "B007",  # unused loop variable
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
